# BIM2RDF

./: ._pre-commit-config.yaml  .containerignore  .gitignore  .pre-commit-config.yaml  Containerfile  README.md  config.toml  pyproject.toml  tasks.py
cicd/: .gitlab-ci.yml  README.md  pyproject.toml
cicd/src/cicd/: __init__.py  tasks.py
dvcdiff/: README.md  pyproject.toml  test.py
dvcdiff/src/dvcdiff/: __init__.py  files.py
mapping/: .gitignore  README.md  dvc.yaml  environment.devenv.yml  forge.py  graph.py  mapping.py  mapping.ttl  materialize.bat  merge.py  obda.jinja  ontop-dev.bat  ontop.bat  params.yaml  pyproject.toml  readme.md  report.qmd  shacl_gen.py  speckl.py  tasks.py  test.ipynb.py  test.py
mapping/223p/: domain.ttl  elecpanel-connector.mapping.rq  elecpanel.mapping.rq  luminaire-connector.mapping.rq  luminaire-elecpanel.mapping.rq  luminaire-room.mapping.rq  luminaire.mapping.rq  luminaire.mapping.sparql  maps.yaml  readme.md  refmaps.yaml  room.mapping.rq  space-room.mapping.rq  space.mapping.rq  zone-space.mapping.rq  zone.mapping.rq
mapping/brick/: domain.ttl  luminaire.mapping.sparql  maps.yaml  rooms.mapping.sparql
mapping/mapping/: conversions.py  engine.py  geometry.py  mapping.py  meta.py  schema.py  speckle.py  speckle_.py  st.py
mapping/mappings/s223/: elecpanel.mapping.rq  from-luminaire-to-lightingjunction.mapping.rq  lighting-hvac-space-room.mapping.rq  luminaire.mapping.rq  lumocc.mapping.rq  room.mapping.rq
mapping/ontologies/: __init__.py  get.py
mapping/ontologies/223p/: MODEL_SP223_core-dec20-2021-v1.0.ttl  MODEL_SP223_system-dec20-2021-v1.0.ttl
mapping/ontologies/pnnl/: brick.ttl
mapping/ontologies/reference-223p/: MODEL_SP223_device-dec20-2021-v1.0.ttl
mapping/reference-223p/: maps.yaml
mapping/rules/: readme.md  remove.md
mapping/rules/mappings/AC/: from-electricoutlet-to-junction.mapping.rq
mapping/rules/mappings/common/: luminaire-connection.mapping.rq
mapping/rules/rec/: readme.md
mapping/rules/s223/: elecpanel.mapping.rq  floor.mapping.rq  from-elecpanael-to-lightingjuntion.mapping.rq  hvacspace.mapping.rq  hvaczone-hvacspace.mapping.rq  hvaczone.mapping.rq  lightingfixture-room.mapping.rq  lightingspace.mapping.rq  lightingzone-lightingspace.mapping.rq  lightingzone.mapping.rq  luminaire.mapping.rq  lumocc.mapping.rq  room.mapping.rq  sensor-lightingspace.mapping.rq  sensor-room.mapping.rq
mapping/s223/: Outlet-ElecWire-Inlet.mapping.rq  Outlet-Elecwire.mapping.rq  conn-elecpanel.mapping.rq  conn-lighting.mapping.rq  connection-inletpoint.mapping.rq  connection-lightingdomainspace.mapping.rq  connection-lightingdomainspace.rq  connection-lightingspace.mapping.rq  elecpanel-connector.mapping.rq  elecpanel-elecwire.mapping.rq  elecpanel.mapping.rq  electricpaneloutlet-elecwire.mapping.rq  electricwire-inletconn.mapping.rq  electricwire-inletlight.mapping.rq  electricwire.mapping.rq  elecwire-Inletconn.mapping.rq  floor.mapping.rq  from-elecpanael-to-lightingjuntion.mapping.rq  from-luminaire-to-lightingjunction.mapping.rq  hvacspace.mapping.rq  hvaczone.mapping.rq  lightingfixture-HVACspace.mapping.rq  lightingfixture-lightingspace.mapping.rq  lightingfixture-room.mapping.rq  lightingspace.mapping.rq  lightingzone.mapping.rq  luminaire-conn-elecpanel.mapping.rq  luminaire-conn-space.rq  luminaire-connection.mapping.rq  luminaire-connection.rq  luminaire-elecconnector.mapping.rq  luminaire-elecpanel.mapping.rq  luminaire-lightconnector.rq  luminaire-outlectconnection.rq  luminaire-outletconn.mapping.rq  luminaire-room.mapping.rq  luminaire-space.mapping.rq  luminaire.mapping.rq  lumocc-room.mapping.rq  lumocc-space.mapping.rq  (+9 more)
mapping/scripts/: install.py  ontop.cmdlines  setup.cmdlines
mapping/speckle/: brick.ttl
mapping/src/bim2rdf_mapping/construct/: __init__.py  queries.py
mapping/src/mapping/: __init__.py  cache.py  config.py  conversions.py  engine.py  geometry.py  graphfix.py  report.py  speckle.py  util.py
mapping/src/mapping/construct/: queries.py
mapping/src/mapping/utils/: _querying.py  conversions.py  data.py  db.py  graph.py  queries.py  query.py  rdflibgraph.py  tables.py
mapping/src/report/: report.py
mapping/src/validation/: analysis.py  engine.py  shacl.py
mapping/test/: .gitignore  proto-medoffice.ttl  query.py  test.py  test.ttl
mapping/tests/: geometry.py  query.py  query.qmd  query.rq  readme.md  tasks.py  test.py  test_sp.py
mapping/tests/testmapping/: outlet.mapping.rq
mapping/validation/: .gitignore  baseline_test.rq  proto-medoffice.ttl  query.py  shacl.py
mapping/work/: distribution.py  dvc.yaml  lbnl-bldg59.dvc  params.yaml  pyshacl_err.py  readme.md  tasks.py
mapping/work/brick/: maps.yaml
mapping/work/cache/: readme.md
mapping/work/input/: buildings.dvc
mapping/work/input/buildings/: lbnl-bldg59.sqlite.dvc  neea-medoffice.dvc  neea-medoffice.sqlite.dvc  proto-medoffice.dvc  proto-medoffice.sqlite.dvc
mapping/work/output/: owlrl_patch.py
mapping/work/report/: report.qmd
project/: pyproject.toml
project/src/project/tasks/: config.py  git.py  run.py  tasks.py
rules/: pyproject.toml
rules/src/bim2rdf_rules/: __init__.py
rules/src/bim2rdf_rules/construct/: rule.py
rules/src/rules/: __init__.py  rule.py  rules.py
rules/test/: test.py
rules/test/mapping/: luminaire.mapping.rq  room.mapping.rq
speckle/: .envrc  environment.devenv.yml  pyproject.toml  readme.md  speckle.py
speckle/speckle/: config.py  graphql.py  objects.py  requests.py  server.py  speckle.py
speckle/src/bim2rdf_speckle/: cache.py  data.py
speckle/src/speckle/: __init__.py  _geometry.py  config.py  data.py  geometry.py  graphql.py  json2rdf.py  meta.py  objects.py  rec.py  requests.py  server.py
speckle/test/: test.py
speckle/tests/: .envrc  test.py
spklauto/: README.md  pyproject.toml
spklauto/src/spklauto/: config.py  main.py
spklauto/test/: config.toml  fixtures.py  readme.md  test.py
topquadrant/: README.md  pyproject.toml
topquadrant/shacl/: .gitignore
topquadrant/src/topquadrant/: __init__.py  bin.py  config.py  install.py  run.py
(+79 files in other folders)
