[project]
name = "bim2rdf"
version = "0.1.0"
description = "Convert BIM data to RDF models"
authors = [
    { name = "Majid alDosari", email = "majid.aldosari@pnnl.gov" }
]
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    #"bim2rdf",
    'dynaconf', # 'python-dotenv', vendored in dyanconf https://www.dynaconf.com/#vendored
    #
    "pytqshacl",
    "rdf-engine",
    # 'local' ones
    "rules",
    "mapping",
    #"ontologies", # ? need this? or just create a ttl loader rule
    "speckle",
]

[project.optional-dependencies]
spklauto = []  # ['spklauto'] under bim2rdf TODO

[dependency-groups]
dev = [
    # tools
    #'aider-install', can uv pip install aider-install
    "ipython", "ipdb",
    "icecream",
    # automation
    # local conveniences
    "pytqshacl[java,cli]",
    "project",
    # spklauto
    # pydantic-settings
]

[tool.uv.sources]
# just listing the dirs alphabetically
mapping =        { path = 'mapping'         , editable = true}
project =        { path = 'project'         , editable = true}
rules =          { path = 'rules'           , editable = true}
#ontologies =     { path = 'ontologies'      , editable = true} 
speckle =        { path = 'speckle'         , editable = true}



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
# include sparql and toml in bld
# TODO: build