[project]
name = "bim2rdf"
version = "0.1.0"
description = "Convert BIM data to RDF models"
authors = [
    { name = "Majid alDosari", email = "majid.aldosari@pnnl.gov" }
]
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    #"bim2rdf",
    'dynaconf', # 'python-dotenv', vendored in dyanconf https://www.dynaconf.com/#vendored
    # 'local' ones
    "rules",
    "mapping",
    #"ontologies", # ? need this? or just create a ttl loader rule
    "speckle",
]

[project.optional-dependencies]
spklauto = [ "spklauto" ]

[dependency-groups]
dev = [
    # tools
    #'aider-install', can uv pip install aider-install
    "ipython", "ipdb",
    "icecream",
    # automation
    "project",
    "bim2rdf[spklauto]",#nice
    # pydantic-settings
]

[tool.uv.sources]
# just listing the dirs alphabetically
mapping =        { workspace=true}
#ontologies =     { path = 'ontologies'      , editable = true} 
project =        { workspace=true}
rules =          { workspace=true}
speckle =        { workspace=true}
spklauto =       { workspace=true}
[tool.uv.workspace]
members = [ # same order as above
"mapping",
"project",
"rules",
"speckle",
"spklauto",
 ]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
# include sparql and toml in bld
# TODO: build