[project]
name = "bim2rdf"
version = "0.1.0"
description = "Convert BIM data to RDF models"
authors = [
    { name = "Majid alDosari", email = "majid.aldosari@pnnl.gov" }
]
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    #"bim2rdf",
    'dynaconf', # 'python-dotenv', vendored in dyanconf https://www.dynaconf.com/#vendored
    # 'local' ones
    "bim2rdf_rules",
    "bim2rdf_mapping",
    #"ontologies", # ? need this? or just create a ttl loader rule
    "bim2rdf_speckle",
    "rdflib", # just to make a nice looking ttl bc pyoxigraph doesn't. otherwise dont want to use!
]
[project.optional-dependencies]
spklauto = ["bim2rdf_spklauto"]
cli = ["fire", "pyyaml"]

[project.scripts]
bim2rdf = "bim2rdf:cli"

[dependency-groups]
dev = [
    #'aider-install', can uvx aider-install
    "ipython", "ipdb",
    "icecream",
    "marimo",
    "cachier",
    # automation
    "project",
    "bim2rdf[spklauto, cli]",#nice
]

[tool.uv.sources]
# just listing the dirs alphabetically
bim2rdf-mapping =   { workspace=true}
#ontologies =     { path = 'ontologies'      , editable = true} 
project =           { workspace=true}
bim2rdf-rules =     { workspace=true}
bim2rdf-speckle =   { workspace=true}
bim2rdf-spklauto =  { workspace=true}
[tool.uv.workspace]
members = [ # same order as above
"mapping",
"project",
"rules",
"speckle",
"spklauto",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
