[project]
name = "cicd"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Majid alDosari", email = "majid.aldosari@pnnl.gov" }
]
dependencies = ["fire"]
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[tool.hatch.build.targets.wheel]
packages = ["src/cicd"]
