[project]
name = "dvcdiff"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Majid alDosari", email = "majid.aldosari@pnnl.gov" }
]
dependencies = [
    "dvc",
    "fire"]
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "marimo"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dvcdiff"]
