[project]
name = "mapping"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Bilal Faye", email = "bilal.faye@pnnl.gov" }, 
    { name = "Majid alDosari", email = "majid.aldosari@pnnl.gov" }, 
]
dependencies = [
    "rdflib",
    "pyyaml",
    "pyshacl", # TODO: could be optional
    "owlrl",   # TODO: could be optional
    "fire",
]
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pandas",  # TODO: it's just used in utils.tables.py. could extract out sparql_utils
    "shelved-cache",
     ]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
mapping = "python -m mapping.speckle"
