[project]
name = "mapping"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Bilal Faye", email = "bilal.faye@pnnl.gov" }, 
    { name = "Majid alDosari", email = "majid.aldosari@pnnl.gov" }, 
]
dependencies = [
    "rdflib",
    "pyyaml",
    "pyshacl", # TODO: could be optional
    "owlrl",   # TODO: could be optional
    "fire",
]
readme = "README.md"
[project.optional-dependencies]
# https://github.com/astral-sh/uv/issues/7541
dev = [
    "pandas",
    "shelved-cache" ]
# cant ref in toml
# [tool.uv]
# dev-dependencies = [
#     "pandas",  # TODO: it's just used in utils.tables.py. could extract out sparql_utils
#     "shelved-cache",
# ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


