[project]
name = "project"
version = "0.1.0"
description = "semantic interoperability"
authors = [
    { name = "Majid alDosari", email = "majid.aldosari@pnnl.gov" }
]
readme = "README.md"
dependencies = [
   "pyprojroot",
  "fire",]

[tool.rye]
managed = true
dev-dependencies = [
    "pylint",
    "gitpython", "pre-commit"]

# dont need this now
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.metadata]
allow-direct-references = true

