[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Majid alDosari", email = "majid.aldosari@pnnl.gov" }
]
dependencies = ["fire", "pyprojroot"]
[project.optional-dependencies]
dev = [
    "pylint",
    "gitpython", "pre-commit"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
