[project]
name = "rules"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Majid alDosari", email = "majid.aldosari@pnnl.gov" },
]
dependencies = [
    "pytqshacl", 
    "rdf-engine",
]
readme = "README.md"

[dependency-groups]
dev = [
    "pytqshacl[java,cli]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


