[project]
name = "bim2rdf-rules"
version = "0.1.0"
description = "BIM2RDF/rules"
authors = [
    { name = "Majid alDosari", email = "majid.aldosari@pnnl.gov" },
]
dependencies = [
    "pytqshacl", 
    "rdf-engine",
    "json2rdf",
]
readme = "README.md"

[dependency-groups]
dev = [
    "pytqshacl[java,cli]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.sdist] # or .wheel??
include = [
    'src/**/*.py',
    'src/**/*.rq', # 
    ]