[project]
name = "speckle"
version = "0.1.0"
description = "Mainly creates a ttl from a speckle json"
authors = [
    {name =  "Majid alDosari", email = "majid.aldosari@pnnl.gov" }, 
]
readme = "README.md"
dependencies = [
    "gql[requests]",
    "urllib3<2",
    #https://github.com/psf/requests/releases/tag/v2.30.0
    "boltons",
    "rdflib",
    "numpy",]
[dependency-groups]
dev = [
    "fire", # the cmd only applies in the dev situation
    ] 


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

