[project]
name = "speckle"
version = "0.1.0"
description = "access speckle data"
authors = [
    {name =  "Majid alDosari", email = "majid.aldosari@pnnl.gov" }, 
]
readme = "README.md"
dependencies = [
    "gql[requests]",
    "urllib3<2",
    #https://github.com/psf/requests/releases/tag/v2.30.0
    "json2rdf"
    ]
[dependency-groups]
dev = [
    "json2rdf[cli]",
    ] 


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

