[project]
name = "speckle"
version = "0.1.0"
description = "access speckle data"
authors = [
    {name =  "Majid alDosari", email = "majid.aldosari@pnnl.gov" }, 
]
readme = "README.md"
dependencies = [
    "gql[requests]",
    "urllib3<2", # TODO: can be updated?
    #https://github.com/psf/requests/releases/tag/v2.30.0
    "json2rdf>=67", "boltons",
    ]
[dependency-groups]
dev = [
    "ipython", "ipdb",
    "json2rdf[cli]",
    "project",
    ]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

