[project]
name = "spklauto"
version = "0.1.0"
description = "BIM2RDF/speckle automate"
readme = "README.md"
authors = [
    { name = "Majid alDosari", email = "majid.aldosari@pnnl.gov" }
]
requires-python = "==3.11.9"
dependencies = [
    "specklepy",
    "pydantic-settings" # for specklepy/speckle_automate. why do i have to spec??
     ]
[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
